--- a/CSS/sass/global/header/_hero.scss
+++ b/CSS/sass/global/header/_hero.scss
@@ -1,7 +1,7 @@
 //BANNER STUFF
 #hero-banner {
     position: relative;
-    overflow: visible;
+    overflow: hidden;
     z-index: 3;
     padding-top: 40px;
     padding-bottom: 40px;
