added new image variables for venue page

--- a/CSS/sass/global/_variables.scss
+++ b/CSS/sass/global/_variables.scss
@@ -29,7 +29,8 @@ $tech-talks:              'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A2
 $datathon:                'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/7259fb9973fa4524a506183923a2b447.jpg';
 
 //venue photos
-$venue-main:                     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/78b867227fff45d1a1d9df13a07f3ea8.jpg';
+$venue-main:                     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8b30859d447a4797b6e0f5bce49a4028.jpg';
+$accommodations-main:            'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6bddec41b5c24ca79b3b10b51a3d9460.jpg';
 $venue-main-vert:                'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/38d745131bb54f26b5c260f07cd38157.jpg';
 $venue-room:                     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/c3889b97d2754a568dee08c6e4abce24.jpg';
 $venue-pool:                     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/52180804f62f4cf5b17f44a8be88e67b.jpg';
@@ -69,6 +70,7 @@ $track-16-video:                 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A
 
 //world 2019 atmosphere photos
 $phoenix-city-photo:     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/f7392b0b8124471f9d1bcf2edca2b624.jpg';
+$phoenix-city-photo2:     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/b20f6b7aed6140b286e2609052f3cc48.jpg';
 
 //world 2018 atmosphere photos
 $world2018-keynote-wide-main-stage:     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/2e0aa210bfcb4aee81f5ed949dfab7b4.jpg';
@@ -98,33 +100,17 @@ $world2017-reg-desk-close:       'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A
 $world2017-reg-desk-wide:        'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/f15371c4006c470e956739654aa95a4d.jpg';
 $world2017-session-audience:     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/5ae5a92fc2cc494393dbcb2ea27e17f2.jpg';
 
-//world 2016 atmosphere photos
-$world2016-main-stage-wide:      'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0fea45068a704c50b7e1597545bd35d0.jpg';
-$world2016-main-stage-angled:    'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/7344fa1876774fbdbae42923e8ac794f.jpg';
-$world2016-main-stage-hugh:      'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/4583ec98a218487eb0c6a33cb0b4232b.jpg';
-$world2016-main-stage-rohit:     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/b8b57fdd07284b199ac621560c79c8a9.jpg';
-$world2016-big-audience:         'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/079d5f26a4b34fb89a136e2d5408f8c6.jpg';
-$world2016-showcase-wide:        'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/f9ae2ed3729341f48f52d2afe47c130c.jpg';
-$world2016-showcase-booth-mstr:  'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3373d9faae1b415c843370a34f95de3d.jpg';
-$world2016-showcase-booth-usher: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/370fa355dda2480898be29a76711d4dd.jpg';
-$world2016-showcase-audience:    'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6343d7b06ccd47b78d0735abcc01a2f1.jpg';
-$world2016-sponsor-booths:       "https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/cef13625e5cd4eafbfd5a52de013ab9d.jpg";
-$world2016-schedule:             "https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/a3852b69be674a84a9bd6415b17407ad.jpg";
-$world2016-show-floor:           'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/5e652ab855454f159ce5c34483f994b6.jpg';
-$world2016-demo-theater:         'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/faa0b7d56fb3433b86d14445bc836472.jpg';
-$customer-awards:                'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/fe5f8a96c4e14b92aff0da7466c585a0.jpg';
-
 //blog photos
-$microphone-image:               'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/657db66217be4916b5c8cde11acaeb2e.jpg';
-$woodworking-shop:               'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3cd00fe7c9de4e57adff68031e426fad.jpg';
+    $microphone-image:               'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/657db66217be4916b5c8cde11acaeb2e.jpg';
+    $woodworking-shop:               'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3cd00fe7c9de4e57adff68031e426fad.jpg';
 
 
 //CUSTOM CUBIC BEZIERS
-$bounce-ease-out: cubic-bezier(.88,0,.5,1);
-// timing functions
-$snappy-ease: cubic-bezier(.86,.01,.23,1);
-$snappy-ease-out: cubic-bezier(.2,0,.03,1);
-$snappy-ease-in: cubic-bezier(.98,0,.76,1);
+    $bounce-ease-out: cubic-bezier(.88,0,.5,1);
+    // timing functions
+    $snappy-ease: cubic-bezier(.86,.01,.23,1);
+    $snappy-ease-out: cubic-bezier(.2,0,.03,1);
+    $snappy-ease-in: cubic-bezier(.98,0,.76,1);
 
 // MEDIA QUERIES
 
