--- a/CSS/sass/pages/_agenda.scss
+++ b/CSS/sass/pages/_agenda.scss
@@ -158,7 +158,7 @@ input[type='search'] {
 		}
 	}
 
-	.program-label, .topic-label, .role-label, .session-label{
+	.theme-label, .topic-label, .role-label, .session-label{
 		transition: all .5s ease-in-out;
 		&.menu-open::after {
 			transform: rotate(-45deg);
@@ -178,15 +178,15 @@ input[type='search'] {
 			height:20px; width:20px;
 		}
 	}
-	.program-label:before {background-color:$red;}
+	.theme-label:before {background-color:$red;}
 	.topic-label:before {background-color:$orange;}
 	.role-label:before {background-color:$blue;}
 	.session-label:before {background-color:$green;}
 
-	.program-label, .role-label, .topic-label, .session-label {
+	.theme-label, .role-label, .topic-label, .session-label {
 		cursor: pointer;
 	}
-	#program-filter, #role-filter, #topic-filter, #session-filter {
+	#theme-filter, #role-filter, #topic-filter, #session-filter {
 		display:block;
 		position:relative;
 		width: 100%;
@@ -327,7 +327,7 @@ input[type='search'] {
 			background-color: $black;
 			height:10px; width:10px;
 		}
-		&.program-tag:before {background-color:$red;}
+		&.theme-tag:before {background-color:$red;}
 		&.topic-tag:before {background-color:$orange;}
 		&.role-tag:before {background-color:$blue;}
 		&.sessiontype-tag:before {background-color:$green;}
