--- a/CSS/sass/components/_agenda-bar.scss
+++ b/CSS/sass/components/_agenda-bar.scss
@@ -203,22 +203,22 @@
         }
     }
     .event-col span.event-title:nth-child(4) {
-        // general sessions
+        // Partner Forum
         grid-column: 1/2;
         grid-row: 2/8;
-        background-color: $orange;
+        background-color: $navy;
         padding: .5em;
 
         @include medium {
-            grid-column: 1/3;
+            grid-column: 1/2;
             grid-row: 4/5;
         }
     }
     .event-col span.event-title:nth-child(5) {
-        // sessions and workshops
+        // General Sessions
         grid-column: 2/3;
         grid-row: 6/10;
-        background-color: $green;
+        background-color: $orange;
         padding: .5em;
 
         @include medium{
@@ -229,23 +229,23 @@
     .event-col span.event-title:nth-child(6) {
         // executive forum
         @include medium {
-            grid-column: 2/3;
+            grid-column: 2/4;
             grid-row: 6/7;
 
         }
-        background-color: lighten($blue, 10%);
+        background-color: $green;
         padding: .5em;
     }
     .event-col span.event-title:nth-child(7) {
         // womens networking
         grid-column: 2/3;
         grid-row: 7/8;
-        background-color: darken($red, 30%);
+        background-color: lighten($blue, 10%);
         padding: .5em;
     }
     .event-col span.event-title:nth-child(8) {
         // block party
-        background-color: darken($red, 10%);
+        background-color: darken($red, 30%);
         padding: .5em;
         @include medium {
             grid-column: 2/3;
@@ -257,7 +257,7 @@
         // partner summit
         grid-column: 1/2;
         grid-row: 9/10;
-        background-color: darken($blue, 20%);
+        background-color: darken($red, 10%);
         padding: .5em;
 
         @include medium {
@@ -271,7 +271,7 @@
             grid-column: 3/4;
             grid-row: 10/11;
         }
-        background-color: $red;
+        background-color: darken($blue, 20%);
         padding: .5em;
     }
     .event-col span.event-title:nth-child(11) {
