added new rules for new photos

--- a/CSS/sass/components/_photo-mosaic.scss
+++ b/CSS/sass/components/_photo-mosaic.scss
@@ -123,4 +123,17 @@
     &.world2018-keynote-cook {
         background-image: url($world2018-keynote-cook);
     }
+    &.customer-awards {
+        background-image: url($customer-awards);
+    }
+    &.dossier {
+        background-image: url($dossier);
+    }
+    &.datathon {
+        background-image: url($datathon);
+    }
+    &.block-party {
+        background-image: url($party-drinks);
+    }
+
 }
