removed hero background image

--- a/CSS/sass/pages/_venue.scss
+++ b/CSS/sass/pages/_venue.scss
@@ -1,6 +1,6 @@
 //////////////////////VENUE PAGE
 #venue-page {
-	#hero-banner {background-image:url($venue-main);}
+	//#hero-banner {background-image:url($venue-main);}
 	#venue-info {
 		.edge.middle {overflow:visible;}
 		.map-row {position:relative; overflow:visible;}
