--- a/CSS/sass/pages/_agenda.scss
+++ b/CSS/sass/pages/_agenda.scss
@@ -309,7 +309,7 @@ input[type='search'] {
 	
 	@include medium{
 		width: 100%;
-		padding-right:150px;
+		padding-left:150px;
 	}
 }
 
@@ -394,12 +394,18 @@ input[type='search'] {
 }
 
 .session-start-time {
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: darken($light-gray, 5%);
+	width: 9%;
+	height: 100vh;
     font-size: 14px;
     text-transform: uppercase;
     letter-spacing: .1em;
-    font-weight: 400;
-    border-bottom: 1px solid $light-gray;
-    border-top: 1px solid $light-gray;
+	font-weight: 400;
+	padding: 1em;
+	margin-top: 0;
 }
 
 .session-description {
