updated images for lodging page

--- a/CSS/sass/global/_variables.scss
+++ b/CSS/sass/global/_variables.scss
@@ -30,6 +30,8 @@
 
 //venue photos
     $venue-main:                     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8b30859d447a4797b6e0f5bce49a4028.jpg';
+    $venue-second:                   'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3cd2212029744005a02c6f25a48f61c0.jpg';
+    $venue-third:                    'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6f516e73056049558d1207c375d796e8.jpg';
     $accommodations-main:            'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6bddec41b5c24ca79b3b10b51a3d9460.jpg';
     $venue-main-vert:                'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/38d745131bb54f26b5c260f07cd38157.jpg';
     $venue-room:                     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/c3889b97d2754a568dee08c6e4abce24.jpg';
@@ -69,8 +71,12 @@
     $track-16-video:                 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8ba404cdd817440cb13ce1fcd77523db.jpg';
 
 //world 2019 atmosphere photos
-    $phoenix-city-photo:     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/f7392b0b8124471f9d1bcf2edca2b624.jpg';
-    $phoenix-city-photo2:     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/b20f6b7aed6140b286e2609052f3cc48.jpg';
+    $phoenix-city-photo:             'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/f7392b0b8124471f9d1bcf2edca2b624.jpg';
+    $phoenix-city-photo2:            'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/b20f6b7aed6140b286e2609052f3cc48.jpg';
+    $grand-canyon:                   'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/cab9c7d6c9ff4aacb6ccb81b3e1c0766.jpg';
+    $sedona:                         'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/7cc276c96c7a45509059edf0fb6a98c9.jpg';
+    $antelope-canyon:                'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/fc5f709746a34cc1bbdbba1b431231fd.jpg';
+    $tombstone:                      'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/697448a555204b1aa73ac945276d19c7.jpg';
 
 //world 2018 atmosphere photos
     $world2018-keynote-wide-main-stage:     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/2e0aa210bfcb4aee81f5ed949dfab7b4.jpg';
@@ -103,6 +109,7 @@
 //blog photos
     $microphone-image:               'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/657db66217be4916b5c8cde11acaeb2e.jpg';
     $woodworking-shop:               'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3cd00fe7c9de4e57adff68031e426fad.jpg';
+    $block-party:               'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/da312152c0b14fe9b229bb31cbe681e8.jpg';
 
 
 //CUSTOM CUBIC BEZIERS
